[package]
name = "watermarker"
version = "0.2.0"
edition = "2021"
authors = ["xomvio <xomvio@proton.me>"]
description = "Watermarker is a CLI tool for adding watermark to images."
repository = "https://github.com/xomvio/watermarker"
license = "GPL3"


[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
image = "0.24.6"