[package]
name = "watermarker"
version = "0.2.4"
edition = "2021"
authors = ["xomvio <xomvio at proton dot me>"]
description = "Watermarker is a CLI tool for adding watermark to images."
repository = "https://github.com/xomvio/watermarker"
license = "GPL-3.0-or-later"


[dependencies]
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "macros"] }
image = "0.24.6"